--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		
 	</head>
 	<body></body>
-		<p>Ingrese su nombre y apellido</p>
+		<p> nombre y apellido</p>
 		
 		
 		<label for=nombre>Nombre</label>
